fix(style): fix player margin and z-index

--- a/src/pages/Labels/Label/index.css
+++ b/src/pages/Labels/Label/index.css
@@ -64,11 +64,12 @@
 
 .player-container {
   position: fixed;
-  bottom: 8.5rem;
+  bottom: 8.9rem;
   left: 0;
   width: 100%;
   height: 2rem;
   border-top:solid 2px var(--secondary-color);
+  z-index:100;
 }
 
 .rhap_time {
